# uptater

./: .gitignore  BUILD_COMMAND.txt  CMakeLists.txt  README.md  aboutdialog.cpp  buttonpanel.cpp  buttonpanel.h  commandrunner.cpp  commandrunner.h  dashboardwidget.cpp  dashboardwidget.h  depcheck.cpp  depcheck.h  main.cpp  mainwindow.cpp  mainwindow.h  packagemanager.cpp  packagemanager.h  pacmanconfigmanager.cpp  pacmanconfigmanager.h  reflectormanager.cpp  reflectormanager.h  resources.qrc  terminalwindow.cpp  terminalwindow.h  uninstall_yay.sh  uptater.desktop  yay.sh
AUR/: .SRCINFO  PKGBUILD
AUR-BIN/: PKGBUILD
uptater-bin/: PKGBUILD  uptater  uptater-bin-1.0.1-1-x86_64.pkg.tar.zst  uptater.desktop
